--- a/contact.html
+++ b/contact.html
@@ -73,19 +73,11 @@
             <button type="submit" class="submit-btn">GỬI TIN NHẮN</button>
         </form>
 
-        <div style="text-align: center; margin-top: 3rem; padding: 2rem; background: linear-gradient(135deg, #f093fb, #f5576c); border-radius: 15px; color: white;">
-            <h3 style="margin-bottom: 1rem;">📍 Thông Tin Liên Hệ</h3>
-            <p style="margin-bottom: 1rem;">Chúng tôi ở đây để hỗ trợ bạn!</p>
-            <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap;">
-                <div>
-                    <i class="fas fa-envelope" style="margin-right: 0.5rem;"></i>
-                    <strong>infographic2vn@gmail.com</strong>
-                </div>
-                <div>
-                    <i class="fas fa-map-marker-alt" style="margin-right: 0.5rem;"></i>
-                    <strong>Hà Nội, Việt Nam</strong>
-                </div>
-            </div>
+        <div style="text-align: center; margin-top: 3rem;">
+            <h3>Thông Tin Liên Hệ</h3>
+            <p style="margin-top: 1rem; color: #666;">
+                <i class="fas fa-envelope"></i> infographic2vn@gmail.com<br>
+            </p>
         </div>
     </main>
 
