--- a/index.html
+++ b/index.html
@@ -397,9 +397,7 @@
             <div style="text-align: center; margin-top: 3rem;">
                 <h3>Thông Tin Liên Hệ</h3>
                 <p style="margin-top: 1rem; color: #666;">
-                    <i class="fas fa-envelope"></i> info@camxuc.vn<br>
-                    <i class="fas fa-phone"></i> +84 123 456 789<br>
-                    <i class="fas fa-map-marker-alt"></i> Hà Nội, Việt Nam
+                    <i class="fas fa-envelope"></i> infographic2vn@gmail.com<br>
                 </p>
             </div>
         </main>
