--- a/public_status_board.html
+++ b/public_status_board.html
@@ -243,8 +243,8 @@
     <main class="main-content">
         <div class="status-header">
             <i class="fas fa-bullhorn" style="font-size: 3rem; margin-bottom: 1rem;"></i>
-            <h2>BỨC TƯỜNG CẢM XÚC CÔNG KHAI</h2>
-            <p>Chia sẻ trạng thái, suy nghĩ, hoặc cảm xúc của bạn. Hỗ trợ định dạng **in đậm**, *in nghiêng*, và [liên kết].</p>
+            <h2>BỨC TƯỜNG CẢM XÚC CÔNG KHAI - MÃI MÃI</h2>
+            <p>Chia sẻ trạng thái, suy nghĩ, hoặc cảm xúc của bạn.</p>
         </div>
 
         <!-- Form Gửi Trạng Thái -->
@@ -257,8 +257,9 @@
                 <input type="text" id="name-input" placeholder="Nhập tên của bạn (hoặc để trống)">
             </div>
             <div class="form-group">
-                <label for="content-input">Nội dung Trạng thái * (Hỗ trợ Markdown)</label>
-                <textarea id="content-input" rows="4" placeholder="Ví dụ: **Hôm nay tôi vui** vì *đã hoàn thành* dự án. (Nội dung không thể xóa sau khi đăng)" required></textarea>
+                <label for="content-input">Nội dung Trạng thái</label>
+                <textarea id="content-input" rows="4" placeholder="Ví dụ: **Hôm nay tôi vui** nhưng chẳng biết vì sao tôi vui. Người ta bảo tôi điên. Tôi: 'ừ'.
+                **in đậm**, *in nghiêng*, và [liên kết](https://example.com)" required></textarea>
             </div>
             <button id="submit-btn" class="submit-btn">ĐĂNG LÊN TƯỜNG</button>
         </div>
