--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <div class="form-group">
                 <label for="content-input">Nội dung Trạng thái</label>
                 <textarea id="content-input" rows="4" placeholder="Ví dụ: **Hôm nay tôi vui** nhưng chẳng biết vì sao tôi vui. Người ta bảo tôi điên. Tôi: 'ừ'.
-                **in đậm**, *in nghiêng*, và [liên kết](https://example.com)" required></textarea>
+                **in đậm**, *in nghiêng*, và [liên kết]" required></textarea>
             </div>
             <button id="modal-submit-btn" class="submit-btn" style="background: linear-gradient(135deg, var(--accent1), var(--accent2));">ĐĂNG LÊN TƯỜNG</button>
         </div>
