--- a/public_status_board.html
+++ b/public_status_board.html
@@ -259,7 +259,7 @@
             <div class="form-group">
                 <label for="content-input">Nội dung Trạng thái</label>
                 <textarea id="content-input" rows="4" placeholder="Ví dụ: **Hôm nay tôi vui** nhưng chẳng biết vì sao tôi vui. Người ta bảo tôi điên. Tôi: 'ừ'.
-                **in đậm**, *in nghiêng*, và [liên kết](https://example.com)" required></textarea>
+                **in đậm**, *in nghiêng*, và [liên kết]" required></textarea>
             </div>
             <button id="submit-btn" class="submit-btn">ĐĂNG LÊN TƯỜNG</button>
         </div>
