--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liên Hệ - Thế Giới Cảm Xúc</title>
+    <title>Contact - infoGraphic</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Fredoka+One&family=Comic+Neue:wght@400;700&display=swap&subset=vietnamese" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -17,16 +17,16 @@
         <div class="subpage-header">
             <div class="subpage-icon">📞</div>
             <h2 class="subpage-title">LIÊN HỆ VỚI CHÚNG TÔI</h2>
-            <p class="subpage-description">Chia sẻ cảm xúc, đặt câu hỏi, hoặc góp ý để chúng tôi phục vụ bạn tốt hơn!</p>
+            <p class="subpage-description">Chia sẻ cảm xúc, đặt câu hỏi, hoặc góp ý để chúng ta trở nên tốt hơn!</p>
             <blockquote style="font-style: italic; color: #666; margin-top: 1rem; text-align: center;">
-                "Mỗi liên hệ là một cơ hội để kết nối và phát triển." - Thế Giới Cảm Xúc
+                "Mỗi liên hệ là một cơ hội để kết nối cảm xúc." - infoGraphic
             </blockquote>
         </div>
 
         <div class="content-grid" style="margin-bottom: 3rem;">
             <div class="content-card">
                 <h3>💬 Chúng Tôi Luôn Lắng Nghe</h3>
-                <p>Bạn có câu hỏi về cảm xúc? Cần hỗ trợ? Hay chỉ muốn chia sẻ trải nghiệm? Chúng tôi luôn sẵn sàng lắng nghe và hỗ trợ bạn!</p>
+                <p>Bạn có câu hỏi về cảm xúc? Hay chỉ muốn chia sẻ trải nghiệm? Chúng tôi luôn sẵn sàng lắng nghe và hỗ trợ bạn!</p>
                 <ul style="padding-left: 1.5rem; color: #555;">
                     <li><strong>Tư vấn cảm xúc:</strong> Hỏi đáp về các loại cảm xúc</li>
                     <li><strong>Hỗ trợ phát triển:</strong> Tư vấn trí tuệ cảm xúc</li>
