--- a/write.html
+++ b/write.html
@@ -30,6 +30,8 @@
     </style>
 </head>
 <body>
+    <div id="header-placeholder"></div>
+
     <div class="container mx-auto max-w-4xl px-4 py-8">
         <header class="flex justify-between items-center mb-8">
             <a href="blog.html" class="flex items-center gap-2 text-gray-600 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-400">
@@ -94,8 +96,11 @@
         </main>
     </div>
 
+    <div id="footer-placeholder"></div>
+
     <div id="toast" class="toast"></div>
 
+    <script src="js/script.js"></script>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
         import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
