--- a/write.html
+++ b/write.html
@@ -35,16 +35,12 @@
     <div id="header-placeholder"></div>
 
     <div class="container mx-auto max-w-4xl px-4 py-8">
-        <header class="flex justify-between items-center mb-8">
+        <div class="mb-8">
             <a href="blog.html" class="flex items-center gap-2 text-gray-600 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-400">
                 <i data-feather="arrow-left" class="h-5 w-5"></i>
                 <span>Quay lại trang Blog</span>
             </a>
-            <button id="dark-mode-toggle" class="p-2 rounded-lg bg-gray-200 dark:bg-gray-700 text-gray-600 dark:text-gray-300">
-                <i data-feather="moon" class="h-5 w-5 block dark:hidden"></i>
-                <i data-feather="sun" class="h-5 w-5 hidden dark:block"></i>
-            </button>
-        </header>
+        </div>
 
         <main class="bg-white dark:bg-gray-800 p-6 md:p-8 rounded-lg shadow-lg">
             <h1 class="text-3xl font-bold mb-6 text-gray-900 dark:text-white">Viết bài mới</h1>
