--- a/index.html
+++ b/index.html
@@ -744,6 +744,11 @@
             <button class="hero-cta-button" id="open-post-modal">
                 Chia sẻ trạng thái
             </button>
+            
+            <!-- Giải thích nhỏ -->
+            <p style="margin-top: 1rem; font-size: 0.9rem; color: rgba(255,255,255,0.8); text-align: center; max-width: 600px; margin-left: auto; margin-right: auto;">
+                Cảm xúc bạn chia sẻ ở đây sẽ xuất hiện ở bên dưới, và trên trang Bức Tường.
+            </p>
         </section>
 
         <!-- Quick Stats Section -->
