--- a/index.html
+++ b/index.html
@@ -772,9 +772,9 @@
 
         <!-- NEW: Blog Introduction Section -->
         <section style="text-align: center; padding: 4rem 2rem; background: #fff; border-radius: 20px; max-width: 1000px; margin: 4rem auto; box-shadow: 0 10px 40px rgba(0,0,0,0.1);">
-            <h2 class="section-title" style="margin-bottom: 1.5rem;">Ghé thăm trang Blog của chúng ta, Đăng bài đăng báo tùy ý</h2>
+            <h2 class="section-title" style="margin-bottom: 1.5rem;">Ghé thăm trang Blog của chúng ta!!</h2>
             <p style="font-size: 1.2rem; color: #666; max-width: 700px; margin: 0 auto 2.5rem;">
-                Khám phá "Blog Tự Do" - nơi cộng đồng cùng nhau chia sẻ những câu chuyện, kiến thức và hành trình cảm xúc sâu sắc. Mọi người đều có thể viết bài mà không cần tài khoản!
+                Khám phá "Blog Tự Do" - nơi chúng ta cùng nhau chia sẻ những câu chuyện, kiến thức và hành trình cảm xúc sâu sắc. Mọi người đều có thể viết bài mà không cần tài khoản! Đăng bài đăng báo tùy ý
             </p>
             <a href="blog.html" class="cta-button" style="background: linear-gradient(45deg, var(--accent2), #3dbbaf); font-size: 1.1rem; padding: 1rem 2.5rem; animation: none;">
                 <i class="fas fa-newspaper"></i> ĐỌC BLOG NGAY
