--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
     <!-- About Page -->
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="about-image">
                 <i class="fas fa-heart"></i>
             </div>
