--- a/angry.html
+++ b/angry.html
@@ -15,6 +15,7 @@
     <!-- Angry Page -->
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">😠</div>
             <h2 class="subpage-title">TỨC GIẬN</h2>
             <p class="subpage-description">Phản ứng khi bị đối xử bất công hoặc vi phạm ranh giới. Giận dữ là tín hiệu cho thấy ranh giới của bạn đang bị xâm phạm.</p>
