--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
     <!-- Contact Page -->
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">📞</div>
             <h2 class="subpage-title">LIÊN HỆ VỚI CHÚNG TÔI</h2>
             <p class="subpage-description">Chia sẻ cảm xúc, đặt câu hỏi, hoặc góp ý để chúng ta trở nên tốt hơn!</p>
