--- a/emotion-wheel.html
+++ b/emotion-wheel.html
@@ -96,6 +96,7 @@
 
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">🎡</div>
             <h2 class="subpage-title">BÁNH XE CẢM XÚC</h2>
             <p class="subpage-description">Công cụ mạnh mẽ để hiểu và đặt tên cho cảm xúc của bạn. Được phát triển bởi nhà tâm lý học Robert Plutchik.</p>
