--- a/emotions.html
+++ b/emotions.html
@@ -15,6 +15,7 @@
     <!-- Emotions Page -->
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">🎭</div>
             <h2 class="subpage-title">THẾ GIỚI CẢM XÚC</h2>
             <p class="subpage-description">Khám phá toàn bộ phổ cảm xúc của con người - từ cơ bản đến phức tạp, từ tích cực đến tiêu cực.</p>
