--- a/eq-quiz.html
+++ b/eq-quiz.html
@@ -121,6 +121,7 @@
 
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">🧠</div>
             <h2 class="subpage-title">TRẮC NGHIỆM TRÍ TUỆ CẢM XÚC (EQ)</h2>
             <p class="subpage-description">Khám phá chỉ số EQ của bạn qua 10 câu hỏi khoa học. IQ mở cửa, EQ giữ bạn ở lại!</p>
