--- a/excited.html
+++ b/excited.html
@@ -15,6 +15,7 @@
     <!-- Excited Page -->
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">🤩</div>
             <h2 class="subpage-title">HÀO HỨNG</h2>
             <p class="subpage-description">Năng lượng tích cực, tràn đầy hy vọng về tương lai. Hào hứng là chất xúc tác cho sự sáng tạo và học hỏi.</p>
