--- a/facts.html
+++ b/facts.html
@@ -15,6 +15,7 @@
     <!-- Facts Page -->
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">🔍</div>
             <h2 class="subpage-title">SỰ THẬT THÚ VỊ VỀ CẢM XÚC</h2>
             <p class="subpage-description">Những điều kỳ diệu mà khoa học đã khám phá về thế giới cảm xúc của con người.</p>
