--- a/faq.html
+++ b/faq.html
@@ -89,6 +89,7 @@
 
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">❓</div>
             <h2 class="subpage-title">CÂU HỎI THƯỜNG GẶP</h2>
             <p class="subpage-description">Giải đáp những thắc mắc phổ biến về cảm xúc, trí tuệ cảm xúc và sức khỏe tinh thần.</p>
