--- a/fear.html
+++ b/fear.html
@@ -17,6 +17,7 @@
     <!-- Fear Page -->
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">😨</div>
             <h2 class="subpage-title">SỢ HÃI</h2>
             <p class="subpage-description">Cảm xúc bảo vệ con người khỏi nguy hiểm. Sợ hãi là cơ chế sinh tồn quan trọng nhất của loài người.</p>
