--- a/love.html
+++ b/love.html
@@ -17,6 +17,7 @@
     <!-- Love Page -->
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">❤️</div>
             <h2 class="subpage-title">YÊU THƯƠNG</h2>
             <p class="subpage-description">Cảm xúc mạnh mẽ và phức tạp nhất của con người. Yêu thương là lý do chúng ta tồn tại.</p>
