--- a/peaceful.html
+++ b/peaceful.html
@@ -15,6 +15,7 @@
     <!-- Peaceful Page -->
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">😌</div>
             <h2 class="subpage-title">BÌNH YÊN</h2>
             <p class="subpage-description">Trạng thái tâm trí thư thái, không lo âu. Bình yên là nền tảng cho sự sáng suốt và hạnh phúc lâu dài.</p>
