--- a/public_status_board.html
+++ b/public_status_board.html
@@ -243,8 +243,9 @@
     <main class="main-content">
         <div class="status-header">
             <i class="fas fa-bullhorn" style="font-size: 3rem; margin-bottom: 1rem;"></i>
-            <h2>BỨC TƯỜNG CẢM XÚC CÔNG KHAI - MÃI MÃI</h2>
-            <p>Chia sẻ trạng thái, suy nghĩ, hoặc cảm xúc của bạn.</p>
+              <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:80px;height:80px;margin:0 auto 8px;display:block;" />
+              <h2>BỨC TƯỜNG CẢM XÚC CÔNG KHAI - MÃI MÃI</h2>
+              <p>Đăng trạng thái nhanh chóng mà không cần tài khoản. Hãy tôn trọng cộng đồng khi chia sẻ.</p>
         </div>
 
         <!-- Form Gửi Trạng Thái -->
