--- a/resources.html
+++ b/resources.html
@@ -49,6 +49,7 @@
 
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">📚</div>
             <h2 class="subpage-title">TÀI NGUYÊN HỌC TẬP</h2>
             <p class="subpage-description">Sách, khóa học, podcast, video và công cụ tốt nhất để phát triển trí tuệ cảm xúc của bạn.</p>
