--- a/sad.html
+++ b/sad.html
@@ -15,6 +15,7 @@
     <!-- Sad Page -->
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">😢</div>
             <h2 class="subpage-title">BUỒN BÃ</h2>
             <p class="subpage-description">Cảm xúc khi mất mát, thất vọng hoặc cô đơn. Buồn bã giúp ta suy ngẫm sâu sắc và trưởng thành hơn.</p>
