--- a/surprise.html
+++ b/surprise.html
@@ -17,6 +17,7 @@
     <!-- Surprise Page -->
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">😲</div>
             <h2 class="subpage-title">NGẠC NHIÊN</h2>
             <p class="subpage-description">Cảm xúc ngắn nhất nhưng mạnh mẽ nhất! Ngạc nhiên mở ra cánh cửa cho mọi trải nghiệm mới.</p>
