--- a/Blog.html
+++ b/Blog.html
@@ -55,8 +55,11 @@
     
     <!-- Main Container -->
     <div class="container mx-auto max-w-7xl px-4 py-8">
-        <header class="text-center mb-8">
-            <h1 class="text-4xl md:text-5xl font-bold tracking-tight text-gray-900 dark:text-white">Blog Tự Do</h1>
+        <header class="text-center mb-8" style="display:flex;flex-direction:column;align-items:center;gap:0.6rem;">
+            <div style="display:flex;align-items:center;gap:0.9rem;">
+                <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;" />
+                <h1 class="text-4xl md:text-5xl font-bold tracking-tight text-gray-900 dark:text-white">Blog Tự Do</h1>
+            </div>
             <p class="text-gray-600 dark:text-gray-300 mt-3 text-lg">Nơi mỗi câu chuyện đều được lắng nghe.</p>
         </header>
 
