--- a/happy.html
+++ b/happy.html
@@ -15,6 +15,7 @@
     <!-- Happy Page -->
     <main class="main-content">
         <div class="subpage-header">
+            <img src="images/logo/logo.svg" alt="infoGraphic.io.vn" class="logo-img" style="width:64px;height:64px;margin-bottom:8px;" />
             <div class="subpage-icon">😄</div>
             <h2 class="subpage-title">HẠNH PHÚC</h2>
             <p class="subpage-description">Cảm giác vui vẻ, mãn nguyện khi mọi thứ diễn ra như mong muốn. Hạnh phúc là trạng thái tinh thần tích cực nhất của con người.</p>
