--- a/Blog.html
+++ b/Blog.html
@@ -15,6 +15,8 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!-- CSS Chung -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/svg+xml" href="images/logo/infographic-logo.svg">
+    <link rel="alternate icon" href="images/logo/worldemotions-logo.png">
 
     <style>
         :root { --background-light: #f7f8fc; --background-dark: #111827; --text-light: #1f2937; --text-dark: #f9fafb; }
