--- a/public_status_board.html
+++ b/public_status_board.html
@@ -9,6 +9,8 @@
     
     <!-- SỬ DỤNG CSS CHUNG để bố cục header/footer hoạt động -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/svg+xml" href="images/logo/infographic-logo.svg">
+    <link rel="alternate icon" href="images/logo/worldemotions-logo.png">
     
     <!-- CSS Tùy chỉnh cho Bức Tường và chức năng rút gọn -->
     <style>
