--- a/eq-quiz.html
+++ b/eq-quiz.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Fredoka+One&family=Comic+Neue:wght@400;700&display=swap&subset=vietnamese" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/svg+xml" href="images/logo/infographic-logo.svg">
+    <link rel="alternate icon" href="images/logo/worldemotions-logo.png">
     <style>
         .quiz-container {
             max-width: 800px;
