--- a/status_list.html
+++ b/status_list.html
@@ -1,1 +1,20 @@
-status_list.html
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Dòng trạng thái</title>
+	<link rel="stylesheet" href="css/styles.css">
+	<link rel="icon" type="image/svg+xml" href="images/logo/infographic-logo.svg">
+	<link rel="alternate icon" href="images/logo/worldemotions-logo.png">
+</head>
+<body>
+	<div id="header-placeholder"></div>
+	<main class="main-content">
+		<h1>Danh sách trạng thái</h1>
+		<p>Trang thống kê trạng thái (tạm placeholder)</p>
+	</main>
+	<div id="footer-placeholder"></div>
+	<script src="js/script.js"></script>
+</body>
+</html>
